# A5DbDoc

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  pyproject.toml
a5dbdoc/: __init__.py  cli.py  inspector.py  models.py  renderer.py  updater.py  writer.py
tests/: conftest.py  test_inspector.py  test_renderer.py  test_updater.py
